plugins {
	id 'java'
	id 'org.springframework.boot' version '3.1.3'
	id 'io.spring.dependency-management' version '1.1.3'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}


dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'javax.servlet:javax.servlet-api:4.0.1'

	//크롤링
	implementation 'org.seleniumhq.selenium:selenium-java:4.15.0'
	implementation 'io.github.bonigarcia:webdrivermanager:5.6.2'
	// Email
	implementation 'org.springframework.boot:spring-boot-starter-mail'
//	implementation 'javax.mail:javax.mail-api:1.6.2'
	// 스웨거
	implementation 'io.springfox:springfox-swagger2:2.9.2'
	implementation 'io.springfox:springfox-swagger-ui:2.9.2'


//	implementation 'org.springdoc:springdoc-openapi-ui:2.0.0'
//	implementation 'io.springfox:springfox-swagger-ui:3.0.0'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.0'

	compileOnly 'org.projectlombok:lombok'
	testImplementation 'junit:junit:4.13.1'
	runtimeOnly 'com.h2database:h2'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}


tasks.named('test') {
	useJUnitPlatform()
}
